INTERNAL: Fixed z-index for dropdowns.

--- a/src/gui02/components/Dropdown/Dropdown.module.scss
+++ b/src/gui02/components/Dropdown/Dropdown.module.scss
@@ -4,6 +4,6 @@
   display: flex;
   flex-direction: column;
   background-color: white;
-  z-index: 200;
+  z-index: 2000;
   @include popoverShadow;
 }
